# SAND-EMI

./: .gitignore  README.md  install.sh  nn_config.sh  run_ecal.sh  run_emi.sh  set_env.sh
backup_nnTrained_files/: nnTrainedchi110.h  nnTrainedchi110_ECAL.cxx  nnTrainedchi110_ECAL.h  nnTrainedchi110_EXTMUID.cxx  nnTrainednotL2_chi110.cxx  nnTrainednotL2_chi110.h  nnTrainednotL4_chi110_ECAL.cxx  nnTrainednotL4_chi110_ECAL.h
input/: atanus_common_inputs_ActiveIron.txt  atanus_common_inputs_ActiveIron_back.txt  atanus_common_inputs_PassiveIron.txt  atanus_common_inputs_new_geom_jan_2022.txt  atanus_fhc_edep_list_2_layers_trapezoidal_extmuid_427_files.txt  atanus_fhc_edep_list_2_layers_trapezoidal_extmuid_427_files.txt_back_apr_01_2021  bings_common_inputs.txt  bings_common_inputs_nibir.txt  out_list.txt
misc/: current_root_command.txt  out_list.txt
source/: ;  CMakeLists.txt  README.txt  extrapolatorECAL.h  extrapolatorEXTMUID.h  muID_inECAL_alone_nodraw.C  muID_inEXTMUID_alone_nodraw_NN.C  nnTrainedchi110.cxx  nnTrainedchi110_ECAL.cxx  nnTrainedchi110_ECAL.h  nnTrainedchi110_EXTMUID.cxx  nnTrainedchi110_EXTMUID.h  nnTrainednotL2_chi110_EXTMUID.cxx  nnTrainednotL2_chi110_EXTMUID.h  pureff.C  runNN.C_back  runNN_ECAL.C  runNN_ECAL.cpp  runNN_EXTMUID.C  runNN_EXTMUID.C_back  runNN_EXTMUID.C_old  runNN_EXTMUID.cpp  runNNnotL2_EXTMUID.C  runNNnotL4_ECAL.C  utils.h
